[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/characters/enemy/crab_enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/characters/enemy/crab_enemy_DDL.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.5, 7.5 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="CrabEnemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6
vframes = 3
frame = 12

[node name="collision_body" type="CollisionShape2D" parent="."]
modulate = Color( 0.501961, 0.858824, 0.0784314, 1 )
position = Vector2( 0.5, 6.5 )
shape = SubResource( 1 )

[node name="area_hit" type="Area2D" parent="." groups=["area"]]
collision_layer = 0
collision_mask = 2

[node name="collision_hit" type="CollisionShape2D" parent="area_hit"]
modulate = Color( 1, 0.0352941, 0.0352941, 1 )
position = Vector2( 0.5, 8.5 )
shape = SubResource( 2 )

[node name="AnimEnemyUno" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="RayCastLimit" type="RayCast2D" parent="."]
position = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 0, 21 )
collision_mask = 9

[connection signal="body_entered" from="area_hit" to="." method="_on_Area2D_body_entered"]
